Add Spring Boot MVC example on Netty with epoll pinned pollers
Spring MVC @RestController running on Netty via
dsyer/dispatcher-servlet-container, replacing Tomcat with our
VirtualIoNativePollerEventLoopGroup backed by epoll pinned pollers.

Blocking handlers run on virtual threads from the scheduler's factory
with carrier affinity. Structured concurrency endpoint demonstrates
StructuredTaskScope with forked tasks on the same carrier.

Fat JAR deployment exercises the classloader challenge: bootstrap +
jctools classes unpacked into META-INF/versions/27/ (MRJAR) so the
system classloader finds them despite Spring Boot's LaunchedClassLoader.

Endpoints:
  GET /         - blocking handler (50ms sleep), shows VT + carrier
  GET /parallel - StructuredTaskScope fork/join with carrier affinity
  GET /health   - quick check